--- a/1.md
+++ b/1.md
@@ -1,9 +1,12 @@
 
-# 深圳两周游反思
------
-## 感受
------
-## 问题分析
------
-## 解决办法
+# 给下一届的建议
+
+## 问题
+通过此次亲身参与比赛，以及在赛场与其他队伍的交流，我认为图像组最大的问题有以下三点（此问题在电控组也可能有）
+1. 写代码能力差
+2. 没有养成良好的写代码习惯
+
+## 解决
+
+## 附录1：C++代码规范
 -----
