--- a/1.md
+++ b/1.md
@@ -2,11 +2,56 @@
 # 给下一届的建议
 
 ## 问题
-通过此次亲身参与比赛，以及在赛场与其他队伍的交流，我认为图像组最大的问题有以下三点（此问题在电控组也可能有）
+通过此次亲身参与比赛，以及在赛场与其他队伍的交流，我认为图像组最大的问题有以下三点（此问题在电控组也可能存在）
 1. 写代码能力差
-2. 没有养成良好的写代码习惯
+2. 没有养成良好的写代码习惯（导致团队传承能力差，每年都像是第一次参加比赛。同时导致代码维护困难，浪费了大量时间）
+3. 某些毫无意义的争论缺乏决断
 
 ## 解决
+### 问题1
+无解。可以组内进行 Code Review ，一个人写的代码至少再经过另外一个人才可以推入仓库，在一定程度上保证代码质量
+### 问题2
+请看我提供的 C++ 代码规范
+### 问题3
 
-## 附录1：C++代码规范
+|1|2|
+|-|-|
+|3|4|
+|5|6|
+
+
+## 附录1：C++ 代码规范
+### 数据类型
+```C++
+// 错误，请弃用 buildin 类型
+int idx = 0;
+
+// 正确，由于代码需要在不同的设备环境（x64, x86, armhf）下运行，有时还需要与电控通信
+// 因此应该使用 stdint.h 中具备明确位数标识的类型定义
+#include <stdint.h>
+int32_t height = 0;
+uint32_t idx= 0;
+
+```
+
+### 变量
+```C++
+
+```
+
+
+### 函数
+
+### 变量
+
+### 返回值
+
+### 逻辑
+
+### 头文件
+
+### 类
+
+### 三方库
+
 -----
