--- a/1.md
+++ b/1.md
@@ -24,31 +24,53 @@
 ### 数据类型
 ```C++
 // 错误，请弃用 buildin 类型
-int idx = 0;
+int x = 0;
 
 // 正确，由于代码需要在不同的设备环境（x64, x86, armhf）下运行，有时还需要与电控通信
 // 因此应该使用 stdint.h 中具备明确位数标识的类型定义
 #include <stdint.h>
-int32_t height = 0;
+int32_t x = 0;
 uint32_t idx= 0;
 
 ```
 
 ### 变量
 ```C++
+// 错误，不要使用拼音作为变量名
+int shu = 0;
+// 正确
+int32_t n_points = 0;
+
+// 错误，不要使用莫名其妙或者有多重意义的简写，rst有可能是 result 或 reset
+#define rst_dealnum 3
+// 正确
+#define result_dealnum 3
+// 正确，idx 是 index 的惯用简写，且此简写保留辅音字母，不会与其他单词混淆
+uint32_t idx= 0;
+
+
+// 正确，变量名可以长点，但是一定要表达清楚
+idx_of_
+```
+
+### 文件取名
+```C++
+// 错误，不要用这种莫名其妙的文件名
+wtw.h
+wtw.cpp
+
+// 正确
 
 ```
 
-
 ### 函数
+// 错误，一个函数应该尽量少访问全局变量，且应该通过参数传递实现数据处理
 
 ### 变量
 
 ### 返回值
 
 ### 逻辑
-
-### 头文件
 
 ### 类
 
