--- a/1.md
+++ b/1.md
@@ -9,7 +9,7 @@
 
 ## 解决
 ### 问题1
-无解。可以组内进行 Code Review ，一个人写的代码至少再经过另外一个人才可以推入仓库，在一定程度上保证代码质量
+无解。可以组内进行 Code Review，一个人写的代码至少再经过另外一个人才可以推入仓库，在一定程度上保证代码质量
 ### 问题2
 请看我提供的 C++ 代码规范
 ### 问题3
@@ -26,7 +26,7 @@
 // 错误，请弃用 buildin 类型
 int x = 0;
 
-// 正确，由于代码需要在不同的设备环境（x64, x86, armhf）下运行，有时还需要与电控通信
+// 正确，由于代码需要在不同的设备环境（x64, x86, armhf, gcc, msvc）下运行，有时还需要与电控通信
 // 因此应该使用 stdint.h 中具备明确位数标识的类型定义
 #include <stdint.h>
 int32_t x = 0;
@@ -50,7 +50,7 @@ uint32_t idx= 0;
 
 
 // 正确，变量名可以长点，但是一定要表达清楚
-idx_of_
+int32_t idx_of_filtered_points = 0;
 ```
 
 ### 文件取名
@@ -60,11 +60,27 @@ wtw.h
 wtw.cpp
 
 // 正确
+// 另外建议文件名只使用小写字母和下划线
+armor_tracking.h
+armor_tracking.cpp
 
 ```
 
 ### 函数
 // 错误，一个函数应该尽量少访问全局变量，且应该通过参数传递实现数据处理
+int32_t src;
+int32_t dst;
+void process()
+{
+    dst = src;
+}
+
+// 正确
+void process(int32_t src, int32_t dst)
+{
+    dst = src;
+}
+
 
 ### 变量
 
