--- a/1.md
+++ b/1.md
@@ -2,7 +2,7 @@
 # 给下一届的建议
 
 ## 问题
-通过此次亲身参与比赛，以及在赛场与其他队伍的交流，我认为图像组最大的问题有以下三点（此问题在电控组也可能存在）
+通过此次亲身参与比赛，以及在赛场与其他队伍的交流，我认为图像组最大的问题是以下三点（此问题在电控组也可能存在）
 1. 写代码能力差
 2. 没有养成良好的写代码习惯（导致团队传承能力差，每年都像是第一次参加比赛。同时导致代码维护困难，浪费了大量时间）
 3. 某些毫无意义的争论缺乏决断
@@ -63,10 +63,10 @@ wtw.cpp
 // 另外建议文件名只使用小写字母和下划线
 armor_tracking.h
 armor_tracking.cpp
-
 ```
 
 ### 函数
+```C++
 // 错误，一个函数应该尽量少访问全局变量，且应该通过参数传递实现数据处理
 int32_t src;
 int32_t dst;
@@ -74,17 +74,22 @@ void process()
 {
     dst = src;
 }
-
 // 正确
 void process(int32_t src, int32_t dst)
 {
     dst = src;
 }
 
-
-### 变量
+// 错误，class 作为参数传递时，应该传递起引用以减少一次构造耗时
+cv::Point2f match_points(cv::Mat src);
+//正确
+cv::Point2f match_points(const cv::Mat &src);
+```
 
 ### 返回值
+```C++
+cv::Mat
+```
 
 ### 逻辑
 
