--- a/1.md
+++ b/1.md
@@ -34,7 +34,7 @@ uint32_t idx= 0;
 
 ```
 
-### 变量
+### 变量和函数命名
 ```C++
 // 错误，不要使用拼音作为变量名
 int shu = 0;
@@ -48,13 +48,12 @@ int32_t n_points = 0;
 // 正确，idx 是 index 的惯用简写，且此简写保留辅音字母，不会与其他单词混淆
 uint32_t idx= 0;
 
-
 // 正确，变量名可以长点，但是一定要表达清楚
 int32_t idx_of_filtered_points = 0;
-```
 
-### 文件取名
-```C++
+// 正确，函数命名清晰明了一看就懂
+std::vector<Text> fuck_error_imgs_off(std::vector<Text> &found_rect, int target_rows, int target_cols)
+
 // 错误，不要用这种莫名其妙的文件名
 wtw.h
 wtw.cpp
@@ -65,7 +64,7 @@ armor_tracking.h
 armor_tracking.cpp
 ```
 
-### 函数
+### 函数调用
 ```C++
 // 错误，一个函数应该尽量少访问全局变量，且应该通过参数传递实现数据处理
 int32_t src;
@@ -80,7 +79,7 @@ void process(int32_t src, int32_t dst)
     dst = src;
 }
 
-// 错误，class 作为参数传递时，应该传递起引用以减少一次构造耗时
+// 错误，class 作为参数传递时，应该传递引用以减少一次构造耗时
 cv::Point2f match_points(cv::Mat src);
 //正确
 cv::Point2f match_points(const cv::Mat &src);
@@ -88,7 +87,35 @@ cv::Point2f match_points(const cv::Mat &src);
 
 ### 返回值
 ```C++
-cv::Mat
+// 错误，不要在代码块内部返回，这样有可能漏掉一些判断
+bool process()
+{
+    if (1)
+        return true;
+    else if (2)
+        return false;
+    else
+    {
+        if (3)
+            return true;
+    }
+}
+
+// 正确
+bool process()
+{
+    bool y = false;
+    if (1)
+        y = true
+    else if (2)
+        y = false;
+    else
+    {
+        if (3)
+            y = true;
+    }
+    return y;
+}
 ```
 
 ### 逻辑
