--- a/1.md
+++ b/1.md
@@ -81,7 +81,7 @@ void process(int32_t src, int32_t dst)
 
 // 错误，class 作为参数传递时，应该传递引用以减少一次构造耗时
 cv::Point2f match_points(cv::Mat src);
-//正确
+// 正确
 cv::Point2f match_points(const cv::Mat &src);
 ```
 
@@ -106,7 +106,7 @@ bool process()
 {
     bool y = false;
     if (1)
-        y = true
+        y = true;
     else if (2)
         y = false;
     else
