--- a/1.md
+++ b/1.md
@@ -9,7 +9,7 @@
 
 ## 解决
 ### 问题1
-无解。可以组内进行 Code Review，一个人写的代码至少再经过另外一个人才可以推入仓库，在一定程度上保证代码质量
+无解。
 ### 问题2
 请看我提供的 C++ 代码规范
 ### 问题3
@@ -58,8 +58,7 @@ std::vector<Text> fuck_error_imgs_off(std::vector<Text> &found_rect, int target_
 wtw.h
 wtw.cpp
 
-// 正确
-// 另外建议文件名只使用小写字母和下划线
+// 正确，另外建议文件名只使用小写字母和下划线
 armor_tracking.h
 armor_tracking.cpp
 ```
