--- a/1.md
+++ b/1.md
@@ -19,19 +19,18 @@
 |3|4|
 |5|6|
 
-
+-----
 ## 附录1：C++ 代码规范
 ### 数据类型
 ```C++
 // 错误，请弃用 buildin 类型
-int x = 0;
+unsigned idx = 0;
 
 // 正确，由于代码需要在不同的设备环境（x64, x86, armhf, gcc, msvc）下运行，有时还需要与电控通信
 // 因此应该使用 stdint.h 中具备明确位数标识的类型定义
 #include <stdint.h>
-int32_t x = 0;
-uint32_t idx= 0;
-
+uint32_t idx = 0;
+// 对于一些只是临时使用的变量，例如 for 循环中的 int i = 0 是可以的
 ```
 
 ### 变量和函数命名
@@ -52,7 +51,7 @@ uint32_t idx= 0;
 int32_t idx_of_filtered_points = 0;
 
 // 正确，函数命名清晰明了一看就懂
-std::vector<Text> fuck_error_imgs_off(std::vector<Text> &found_rect, int target_rows, int target_cols)
+std::vector<Text> fuck_error_imgs_off(std::vector<Text> &found_rect, int target_rows, int target_cols);
 
 // 错误，不要用这种莫名其妙的文件名
 wtw.h
@@ -117,10 +116,20 @@ bool process()
 }
 ```
 
-### 逻辑
-
 ### 类
-
-### 三方库
-
+```C++
+class Node // 类名大写
+{
+public:
+    Node(const std::string &pip) : pip_(pip)
+    {
+        fd_ = fopen("xxx");
+        if (0 == fd_)
+            throw std::runtime_error("Can not open file xxx"); //如果构造函数出错没办法返回，应该直接抛出异常
+    }
+private:
+    std::string pip_; // 类成员变量以下划线结尾，便于区分临时变量，在初始化的时候方便构造
+    FILE *fd_;
+};
+```
 -----
