--- a/1.md
+++ b/1.md
@@ -13,12 +13,16 @@
 ### 问题2
 请看我提供的 C++ 代码规范
 ### 问题3
-
-|1|2|
-|-|-|
-|3|4|
-|5|6|
-
+|环境|版本|理由|
+|-|-|-|
+|Ubuntu|16.04 LTS||
+|Onboard Computer|mini-PC等|尽量用x86架构的，如果用armhf需要手动编译内核模块，以及各种玄学问题|
+|项目工程|CMake|CMake可以生成多种IDE的项目文件，可以方便的在VS、Eclipse等切换，且便于跨平台编译|
+|IDE|随意|请不要用记事本写代码，如果有人用记事本写代码就踢了他（代码量5W以上的除外）|
+|C++|-std=c++11|c++11是现代c++的标志，今年是2017年，请抛弃已经过时的教科书，用现代的c++语法编程|
+|OpenCV|3.2.x|今年2017|
+|OpenCV API|C++|禁止使用C风格API，需要手动管理内存|
+|Eigen|Latest Stable||
 -----
 ## 附录1：C++ 代码规范
 ### 数据类型
