--- a/1.md
+++ b/1.md
@@ -2,11 +2,11 @@
 # 给下一届的建议
 
 ## 问题
-通过此次亲身参与比赛，以及在赛场与其他队伍的交流，我认为图像组最大的问题是以下三点（此问题在电控组也可能存在）
-1. 写代码能力差
-2. 没有养成良好的写代码习惯（导致团队传承能力差，每年都像是第一次参加比赛。同时导致代码维护困难，浪费了大量时间）
-3. 某些毫无意义的争论缺乏决断。用什么版本的库，写 C++ 还是 C 有什么好争的
-4. 频繁开会
+我认为图像组最大的问题是以下三点
+> 1. 写代码能力差
+> 2. 没有养成良好的写代码习惯（导致团队传承能力差，每年都像是第一次参加比赛。同时导致代码维护困难，浪费了大量时间）
+> 3. 某些毫无意义的争论缺乏决断。用什么版本的库，写 C++ 还是 C 有什么好争的
+> 4. 频繁开会
 
 ## 解决
 ### 问题1
