--- a/1.md
+++ b/1.md
@@ -2,7 +2,7 @@
 # 给下一届的建议
 
 ## 问题
-我认为图像组最大的问题是以下三点
+我认为图像组最主要的问题是以下几点
 > 1. 写代码能力差
 > 2. 没有养成良好的写代码习惯（导致团队传承能力差，每年都像是第一次参加比赛。同时导致代码维护困难，浪费了大量时间）
 > 3. 某些毫无意义的争论缺乏决断。用什么版本的库，写 C++ 还是 C 有什么好争的
