--- a/1.md
+++ b/1.md
@@ -17,12 +17,12 @@
 |环境|版本|理由|
 |-|-|-|
 |Ubuntu|16.04 LTS||
-|Onboard Computer|mini-PC等|尽量用x86架构的，如果用armhf需要手动编译内核模块，以及各种玄学问题|
-|项目工程|CMake|CMake可以生成多种IDE的项目文件，可以方便的在VS、Eclipse等切换，且便于跨平台编译|
+|Onboard Computer|mini-PC等|尽量用 x86 架构的，Ubuntu 对 armhf 只有 Server 版本，内核模块非常精简，需要手动编译内核模块，以及各种玄学问题|
+|项目工程|CMake|CMake可以生成多种 IDE 的项目文件，可以方便的在 VS、Eclipse 等切换，且便于跨平台编译|
 |IDE|随意|请不要用记事本写代码，如果有人用记事本写代码就踢了他（代码量10W以上的除外）|
-|C++|-std=c++11|c++11是现代c++的标志，今年是2017年，请抛弃已经过时的教科书，用现代的c++语法编程|
+|C++|-std=c++11|c++11 是现代 c++ 的标志，今年是 2017 年，请抛弃已经过时的教科书，用现代的 c++ 语法编程|
 |OpenCV|3.2.x|今年2017|
-|OpenCV API|C++接口|禁止使用C风格API，需要手动管理内存|
+|OpenCV API|C++接口|禁止使用 C 风格 API，需要手动管理内存|
 |Eigen|Latest Stable||
 ### 问题4
 我认为频繁的开会是没有意义的，有一段时间，图像组的同学们9点到实验室，半个小时开机，再聊天半个小时，等到10点开会询问进度所有人都说没问题。然而事实是怎样？写的乱七八糟的代码根本没办法维护，直到要去深圳的前一天程序居然还有至少多处逻辑错误、多线程冲突甚至 segment fault，对于咱们写代码的人来说，程序写崩溃绝对绝对是无法容忍的错误，尤其是不到 2000 行的代码也能写崩溃，简直是不可思议。**程序跑 10 次，2 次成功 7 次误识别 1 次崩溃，开会汇报的时候简称为成功，开这样的会有什么意义**？
