--- a/1.md
+++ b/1.md
@@ -1,10 +1,9 @@
 
-# 给下一届的建议
+# 我认为的图像组主要问题
 
 ## 问题
-我认为图像组最主要的问题是以下几点
 > 1. 写代码能力差
-> 2. 没有养成良好的写代码习惯（导致团队传承能力差，每年都像是第一次参加比赛。同时导致代码维护困难，浪费了大量时间）
+> 2. **没有养成良好的编程习惯**（导致团队传承能力差，每年都像是第一次参加比赛。同时导致代码维护困难，浪费了大量时间）
 > 3. 某些毫无意义的争论缺乏决断。用什么版本的库，写 C++ 还是 C 有什么好争的
 > 4. 频繁开会
 
@@ -23,7 +22,8 @@
 |C++|-std=c++11|c++11 是现代 c++ 的标志，今年是 2017 年，请抛弃已经过时的教科书，用现代的 c++ 语法编程|
 |OpenCV|3.2.x|今年2017|
 |OpenCV API|C++接口|禁止使用 C 风格 API，需要手动管理内存|
-|Eigen|Latest Stable||
+|Eigen|Stable||
+|gRPC|Stable|远程调用|
 ### 问题4
 我认为频繁的开会是没有意义的，有一段时间，图像组的同学们9点到实验室，半个小时开机，再聊天半个小时，等到10点开会询问进度所有人都说没问题。然而事实是怎样？写的乱七八糟的代码根本没办法维护，直到要去深圳的前一天程序居然还有至少多处逻辑错误、多线程冲突甚至 segment fault，对于咱们写代码的人来说，程序写崩溃绝对绝对是无法容忍的错误，尤其是不到 2000 行的代码也能写崩溃，简直是不可思议。**程序跑 10 次，2 次成功 7 次误识别 1 次崩溃，开会汇报的时候简称为成功，开这样的会有什么意义**？
 
@@ -133,11 +133,240 @@ public:
     {
         fd_ = fopen("xxx");
         if (0 == fd_)
-            throw std::runtime_error("Can not open file xxx"); //如果构造函数出错没办法返回，应该直接抛出异常
+            throw std::runtime_error("Can not open file xxx"); //如果构造无返回值，出错应该直接抛出异常
     }
 private:
     std::string pip_; // 类成员变量以下划线结尾，便于区分临时变量，在初始化的时候方便构造
     FILE *fd_;
 };
+```
+
+### 命名空间
+```C++
+// 对于多人写的多个子程序，可以在程序最外层用命名空间包起来，这样可以避免重名问题，且可以将代码落实到人
+name space wang
+{
+cv::Point2f process(cv::Mat src)
+{
+...
+}
+}
+
+// 使用时
+cv::Point2f result = wang::process(src);
+```
+
+### 多线程
+```C++
+// 对于图像处理类 CPU 密集形的程序，多线程使用我提供的此种方法效率最高
+// 我将这种方法称为“流水线处理法”
+// 另外需要说明的是，只要前期代码封装的足够好，到了最后改成多线程是十分方便的
+// 因此可以说，多线程起到的作用的锦上添花，而不是雪中送碳
+// 如果代码单线程都跑着有问题，那么使用多线程毫无意义
+
+std::thread *thread_read_frame = nullptr;
+std::thread *thread_preprocess = nullptr;
+std::thread *thread_main_tasks_1 = nullptr;
+std::thread *thread_main_tasks_2 = nullptr;
+
+bool stop_flag = 0;
+
+cv::Mat img_raw;
+cv::Mat img_edge;
+std::vector<std::vector<cv::Point>> final_counters;
+
+// 线程锁的逻辑是此类多线程程序的核心
+// 每一个数据块使用两个锁，分别是读锁和写锁
+// 程序的运行逻辑是：
+// 1
+// 2
+// 3-1
+// 4-2
+// 5-3-1
+// 6-4-2
+// 1-5-3
+// 2-6-4
+// 3-1-5
+// 4-2-6
+// 如果在每一个线程中依次 print 出 1234，那么：
+// 单线程输出：123412341234
+// 多线程输出：123412341234
+// 区别是，多线程在 2 执行时可以瞬间从 1 拿到数据
+// 或者说，1-2 这一段时间变快了，但总体逻辑是不会乱的
+std::mutex img_raw_ready_to_read;
+std::mutex img_raw_ready_to_write;
+std::mutex img_edge_ready_to_read;
+std::mutex img_edge_ready_to_write;
+std::mutex vec_final_ready_to_read;
+std::mutex vec_final_ready_to_write;
+
+// 第一个流水线，读图
+void read_frame(int id)
+{
+	cv::VideoCapture capture(0);
+	cv::Mat frame;
+	if (!capture.isOpened())
+	{
+		std::cout << "error opening video" << std::endl;
+		return;
+	}
+	while (1)
+	{
+		img_raw_ready_to_write.lock();
+		//
+		capture >> frame;
+		cv::cvtColor(frame, img_raw, CV_BGR2GRAY);
+		//
+		img_raw_ready_to_read.unlock();
+		//
+		if (stop_flag)
+			break;
+	}
+}
+
+// 第二个流水线，预处理
+void preprocess(int id)
+{
+	while (1)
+	{
+		img_raw_ready_to_read.lock();
+		img_edge_ready_to_write.lock();
+		//
+		cv::medianBlur(img_raw, img_edge, 5);
+		cv::GaussianBlur(img_raw, img_edge, cv::Size(5, 5), 0, 0);
+		cv::adaptiveThreshold(img_raw, img_edge, 255,
+				cv::ADAPTIVE_THRESH_GAUSSIAN_C, cv::THRESH_BINARY, 7, 5);
+		//
+		img_raw_ready_to_write.unlock();
+		img_edge_ready_to_read.unlock();
+		//
+		if (stop_flag)
+			break;
+	}
+}
+
+// 第三个流水线，密集运算
+void main_tasks_1(int id)
+{
+	while (1)
+	{
+		img_edge_ready_to_read.lock();
+		vec_final_ready_to_write.lock();
+		//
+		std::vector<std::vector<cv::Point>> original_contours;
+		std::vector<cv::Vec4i> hierarchy;
+		std::vector<cv::Rect> original_rects;
+		cv::findContours(img_edge, original_contours, hierarchy, CV_RETR_TREE,
+				CV_CHAIN_APPROX_SIMPLE);
+		final_counters = original_contours;
+		//
+		img_edge_ready_to_write.unlock();
+		vec_final_ready_to_read.unlock();
+		//
+		if (stop_flag)
+			break;
+	}
+}
+
+int multi_thread_f = 0;
+
+// 第四个流水线，密集运算
+void main_tasks_2(int id)
+{
+	while (1)
+	{
+		vec_final_ready_to_read.lock();
+		//
+		for (auto it = final_counters.begin(); it != final_counters.end(); it++)
+		{
+			int a = 0;
+			a++;
+		}
+		//
+		vec_final_ready_to_write.unlock();
+		multi_thread_f++;
+		//
+		if (stop_flag)
+			break;
+	}
+}
+
+// 测试多线程
+void test_multi_thread()
+{
+	int64 tick_start = cv::getTickCount();
+	//
+	img_raw_ready_to_read.lock();
+	img_edge_ready_to_read.lock();
+	vec_final_ready_to_read.lock();
+	thread_read_frame = new std::thread(read_frame, 1);
+	thread_preprocess = new std::thread(preprocess, 2);
+	thread_main_tasks_1 = new std::thread(main_tasks_1, 3);
+	thread_main_tasks_2 = new std::thread(main_tasks_2, 4);
+
+	std::this_thread::sleep_for(std::chrono::seconds(10));
+	//
+	int64 tick_end = cv::getTickCount();
+	float real_time = (tick_end - tick_start) / cv::getTickFrequency();
+	std::cout << "multi thread: " << multi_thread_f / real_time << " fps"
+			<< std::endl;
+	stop_flag = 1;
+	thread_read_frame->join();
+	thread_preprocess->join();
+	thread_main_tasks_1->join();
+	thread_main_tasks_2->join();
+
+	delete thread_read_frame;
+	delete thread_preprocess;
+	delete thread_main_tasks_1;
+	delete thread_main_tasks_2;
+}
+
+// 测试单线程
+void test_single_thread()
+{
+	int64 tick_start = cv::getTickCount();
+	//
+	cv::VideoCapture capture(0);
+	cv::Mat frame;
+	if (!capture.isOpened())
+	{
+		std::cout << "error opening video" << std::endl;
+		return;
+	}
+	for (int i = 0; i < 200; i++)
+	{
+		capture >> frame;
+		cv::cvtColor(frame, img_raw, CV_BGR2GRAY);
+		//
+		cv::medianBlur(img_raw, img_edge, 5);
+		cv::GaussianBlur(img_raw, img_edge, cv::Size(5, 5), 0, 0);
+		cv::adaptiveThreshold(img_raw, img_edge, 255,
+				cv::ADAPTIVE_THRESH_GAUSSIAN_C, cv::THRESH_BINARY, 7, 5);
+		//
+		std::vector<std::vector<cv::Point>> original_contours, final_counters;
+		std::vector<cv::Vec4i> hierarchy;
+		std::vector<cv::Rect> original_rects;
+		cv::findContours(img_edge, original_contours, hierarchy, CV_RETR_TREE,
+				CV_CHAIN_APPROX_SIMPLE);
+		for (auto it = final_counters.begin(); it != final_counters.end(); it++)
+		{
+			int a = 0;
+			a++;
+		}
+		final_counters = original_contours;
+	}
+	//
+	int64 tick_end = cv::getTickCount();
+	float real_time = (tick_end - tick_start) / cv::getTickFrequency();
+	std::cout << "single thread: " << 200 / real_time << " fps" << std::endl;
+}
+
+int main()
+{
+	test_single_thread();
+	test_multi_thread();
+	return 0;
+}
 ```
 -----
