--- a/1.md
+++ b/1.md
@@ -80,7 +80,7 @@ void process()
     dst = src;
 }
 // 正确
-void process(int32_t src, int32_t dst)
+void process(int32_t src, int32_t &dst)
 {
     dst = src;
 }
